[package]
name = "rust-database-common"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-postgres = { git ="https://github.com/deadpool-rs/deadpool", tag= "deadpool-postgres-v0.14.1" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.17" }
tokio-postgres = { git = "https://github.com/rust-postgres/rust-postgres", tag = "tokio-postgres-v0.7.14", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
