[package]
name = "rust-database-common"
version = "2.0.1"
edition = "2024"

[dependencies]
deadpool-postgres = { version = "0.14.1" }
native-tls = { version = "0.2.18" }
postgres-native-tls = "0.5.3"
thiserror = { version = "2.0.18" }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
